Created backend planning & restructured project
Added:
Dotenv,
Flask,
Routing planning,
fixed DB creation script

--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,4 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 Website/backend/.env
+additionalFiles/backend_plan/.$descriptionRoutingBackend.drawio.bkp
