Changed project structure
Changed project structure to work better with flask & optimized it

--- a/.gitignore
+++ b/.gitignore
@@ -396,5 +396,5 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
-Website/backend/.env
+app/.env
 additionalFiles/backend_plan/.$descriptionRoutingBackend.drawio.bkp
