--- a/.gitignore
+++ b/.gitignore
@@ -396,5 +396,5 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
-app/.env
 additionalFiles/backend_plan/.$descriptionRoutingBackend.drawio.bkp
+.env
